[tool.poetry]
name = "haxballgym"
version = "0.6.0"
description = "HaxBallGym is a python package that can be used to treat the game HaxBall as though it were an OpenAI-style environment for Reinforcement Learning projects."
authors = ["Wazarr <jeje_04@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
numpy = "^2.4.2"
gymnasium = "^1.2.3"
ursinaxball = { path = "packages/ursinaxball", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
